[package]
name = "signal"
description = """
    The higher-level abstractions around unix signals
"""
version = "0.6.0"
license = "MIT/Apache-2.0"
authors = ["Paul Colomiets <paul@colomiets.name>"]
homepage = "https://github.com/tailhook/signal"
repository = "https://github.com/tailhook/signal"
documentation = "https://docs.rs/signal"

[dependencies]
nix = "0.11.0"
libc = "0.2.12"
